[package]
name = "zach_os"
version = "0.1.0"
edition = "2018"
authors = ["Zacharie Côté <zacharie-cote@hotmail.ca>"]

[[bin]]
name = "zach_os"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]
